Bug 445544: Navigating away from an offline app fails.  r=honzab, r+sr=bz