content/base/src/nsContentSink.cpp
@@ -73,6 +73,7 @@
 #include "nsIOfflineCacheUpdate.h"
 #include "nsIApplicationCache.h"
 #include "nsIApplicationCacheContainer.h"
+#include "nsIApplicationCacheChannel.h"
 #include "nsIApplicationCacheService.h"
 #include "nsIScriptSecurityManager.h"
 #include "nsIDOMLoadStatus.h"
@@ -1076,7 +1077,7 @@ nsContentSink::ProcessOfflineManifest(nsIContent *aElement)
   // Grab the application cache the document was loaded from, if any.
   nsCOMPtr<nsIApplicationCache> applicationCache;
 
-  nsCOMPtr<nsIApplicationCacheContainer> applicationCacheChannel =
+  nsCOMPtr<nsIApplicationCacheChannel> applicationCacheChannel =
     do_QueryInterface(mDocument->GetChannel());
   if (applicationCacheChannel) {
     rv = applicationCacheChannel->GetApplicationCache(
